add some more info to the readme

--- a/tk_barrydegraaff_bulkreply_zimlet/help/index.html
+++ b/tk_barrydegraaff_bulkreply_zimlet/help/index.html
@@ -58,7 +58,7 @@ border: 1px solid #888888;
 <h1>How to use Zimbra Bulk Reply Zimlet</h1>
 <ul>
 <li>Select up to 100 email messages in a folder by scrolling down in your mailbox, do not use CTRL+A and CTRL+SHIFT+A as this will not work.</li>
-<li>2. Drag and drop them on to the Bulk Reply menu icon.</li>
+<li>Drag and drop them on to the Bulk Reply menu icon.</li>
 </ul>
 <img src="select.png" alt=""><br>
 <br>
